# controllers/TaskService.js
@@ -1,19 +1,26 @@
 'use strict';
 
+var dbHost = require('../index');
+var _ = require('lodash');
+var ObjectId = require('mongodb').ObjectID;
+var moment = require('moment');
+
 exports.tasksCategoriesGET = function(args, res, next) {
   /**
    * Gets the list of task category names currently in use
    *
    * returns List
    **/
-  var examples = {};
-  examples['application/json'] = [ "aeiou" ];
-  if (Object.keys(examples).length > 0) {
+  dbHost.getDb().collection('tasks').distinct('category', function (err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;
+    }    
+    
     res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
+    res.end(JSON.stringify(result || {}, null, 2));
+  })
 }
 
 exports.tasksCleanupPOST = function(args, res, next) {
@@ -31,25 +38,29 @@ exports.tasksGET = function(args, res, next) {
    *
    * dueDate date The minimum due date of the tasks to return (optional)
    * returns List
-   **/
-  var examples = {};
-  examples['application/json'] = [ {
-  "dueDate" : "2000-01-23",
-  "repeat" : {
-    "unit" : "aeiou",
-    "rate" : 123
-  },
-  "name" : "aeiou",
-  "id" : "aeiou",
-  "category" : "aeiou",
-  "lastDueDate" : "2000-01-23"
-} ];
-  if (Object.keys(examples).length > 0) {
+   **/  
+   var pipeline = [
+     {
+       $sort: { dueDate: 1 }
+     },     
+     {
+       $group: {
+         _id: '$category', 
+         tasks: { $push : "$$ROOT" }
+       }
+     }
+   ]
+
+  dbHost.getDb().collection('tasks').aggregate(pipeline).toArray(function (err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;
+    }    
+    
     res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
+    res.end(JSON.stringify(result || {}, null, 2));
+  })
 }
 
 exports.tasksIdCompleteDELETE = function(args, res, next) {
@@ -59,7 +70,38 @@ exports.tasksIdCompleteDELETE = function(args, res, next) {
    * id String Task ID
    * no response value expected for this operation
    **/
-  res.end();
+  dbHost.getDb().collection('tasks').findOne({ _id: ObjectId(args.id.value) }, function(err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;       
+    }
+    
+    delete result._id;
+
+    if (result.lastDueDate) {
+      result.dueDate = result.lastDueDate;
+      result.lastDueDate = null;
+    } else {
+      res.statusCode = 304;
+      res.end();
+      return;
+    }
+
+    dbHost.getDb().collection('tasks').updateOne({ _id: ObjectId(args.id.value) }, result, null, function(err, result) {
+      if (err) {
+        res.statusCode = 500;
+        res.end(JSON.stringify(err));
+        return;      
+      } else if (result.modifiedCount === 0) {
+        res.statusCode = 404;
+      } else {
+        res.statusCode = 204;
+      }
+
+      res.end();
+    });
+  });
 }
 
 exports.tasksIdCompletePOST = function(args, res, next) {
@@ -69,7 +111,43 @@ exports.tasksIdCompletePOST = function(args, res, next) {
    * id String Task ID
    * no response value expected for this operation
    **/
-  res.end();
+  dbHost.getDb().collection('tasks').findOne({ _id: ObjectId(args.id.value) }, function(err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;       
+    }
+    
+    delete result._id;
+
+    if (result.dueDate) {
+      result.lastDueDate = result.dueDate;
+    }
+
+    if (!_.isEmpty(result.repeat)) {
+      var now = moment();
+
+      do {
+        result.dueDate = moment(result.dueDate).add(result.repeat.rate, result.repeat.unit).format('YYYY-MM-DD');
+      } while (now.isSameOrAfter(result.dueDate));
+    } else {
+      result.dueDate = null;
+    }
+
+    dbHost.getDb().collection('tasks').updateOne({ _id: ObjectId(args.id.value) }, result, null, function(err, result) {
+      if (err) {
+        res.statusCode = 500;
+        res.end(JSON.stringify(err));
+        return;      
+      } else if (result.modifiedCount === 0) {
+        res.statusCode = 404;
+      } else {
+        res.statusCode = 204;
+      }
+
+      res.end();
+    });
+  });
 }
 
 exports.tasksIdDELETE = function(args, res, next) {
@@ -79,7 +157,19 @@ exports.tasksIdDELETE = function(args, res, next) {
    * id String Task ID
    * no response value expected for this operation
    **/
-  res.end();
+  dbHost.getDb().collection('tasks').deleteOne({ _id: ObjectId(args.id.value) }, function(err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;
+    } else if (result.deletedCount === 0) {
+      res.statusCode = 404;
+    } else {
+      res.statusCode = 204;
+    }
+    
+    res.end();
+  });
 }
 
 exports.tasksIdGET = function(args, res, next) {
@@ -89,24 +179,19 @@ exports.tasksIdGET = function(args, res, next) {
    * id String Task ID
    * returns Task
    **/
-  var examples = {};
-  examples['application/json'] = {
-  "dueDate" : "2000-01-23",
-  "repeat" : {
-    "unit" : "aeiou",
-    "rate" : 123
-  },
-  "name" : "aeiou",
-  "id" : "aeiou",
-  "category" : "aeiou",
-  "lastDueDate" : "2000-01-23"
-};
-  if (Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
+  dbHost.getDb().collection('tasks').findOne({ _id: ObjectId(args.id.value) }, function(err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;
+    } else if (_.isEmpty(result)) {
+      res.statusCode = 404;
+      res.end();
+    } else {
+      res.setHeader('Content-Type', 'application/json');
+      res.end(JSON.stringify(result || {}, null, 2));    
+    }
+  })
 }
 
 exports.tasksIdPUT = function(args, res, next) {
@@ -117,7 +202,21 @@ exports.tasksIdPUT = function(args, res, next) {
    * task Task The updated task
    * no response value expected for this operation
    **/
-  res.end();
+  delete args.task.value._id;
+
+  dbHost.getDb().collection('tasks').updateOne({ _id: ObjectId(args.id.value) }, args.task.value, null, function(err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;
+    } else if (result.modifiedCount === 0) {
+      res.statusCode = 404;
+    } else {
+      res.statusCode = 204;
+    }
+
+    res.end();
+  });
 }
 
 exports.tasksPOST = function(args, res, next) {
@@ -127,6 +226,16 @@ exports.tasksPOST = function(args, res, next) {
    * task Task The task to create
    * no response value expected for this operation
    **/
-  res.end();
+  dbHost.getDb().collection('tasks').insert(args.task.value, function(err, result) {
+    if (err) {
+      res.statusCode = 500;
+      res.end(JSON.stringify(err));
+      return;
+    }
+
+    res.setHeader('location', '/tasks/' + result.insertedIds[0]);
+    res.statusCode = 201;
+    res.end();
+  })  
 }
 
